"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-11-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-90:
	  lexer/hacflat-lex.ll: added global variable to control whether
		or not #FILE { ... } wrappers are printed or omitted, 
		still enabled by default, but...
	  main/flatten.cc: pass -w (for no-wrap) to suppress wrappers.  
	  test suite updated accordingly.


2007-11-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-89:
	  Added: lexer/flex_lexer_state.cc.  Defines destructor
		the deallocates the buffer or buffer stack.  
		Uses newly added configure tests for lexer features.
		Header file updated accordingly.  
	  Noted false-positive memory leak report in BUGS.  
		Not a bug, libstdc++ uses pool allocator.


2007-10-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-88:
	  cygwin-compatibility accomodations (part 1)
	  configure additions in top-srcdir, 
		and corresponding library uses (util/ChangeLog)


2007-10-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-87:
	  lexer/purify_flex.awk: generalizd pattern match for a few more 
	  	function calls to rewrite, to accommodate flex 2.5.31.


2007-10-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-86:
	  Minor -f ACT mode reject-valid bug fix, thanks to test from Tadeo.


2007-10-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-merged-channel-03-05:
	  Branch merge.  Summary:
	  Enabled shared channel notation !! and ??to explicitly declare
		when a channel is allowed to be connected to multiple
		consumers/producers.  However, it is still the user's
		responsibility to guarantee that access to such channels
		is still exclusive.  
	  Also includes one bug fix: trying to port-connect incomplete type.

