@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-11-04	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-91:
+	  hacpp (flatten) bug fix: match fake-identifiers to avoid
+		substrings that happen to be keywords, duh!
+		Gracias, Tadeo, for finding and reporting.
+	  Test cases added test/lexer dir.  
+
+
 2007-11-02	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-90:
